--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
   </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
+  <header>
+  <h1>Reliable, efficient delivery</h1>
+  <h1>Powered by Technology</h1>
+<p>
   Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful
+</p>
+</header>
 
   Supervisor
   Monitors activity to identify project roadblocks
