container html added

--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link rel=style href="style.css"> 
   <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
   <header>
   <h1>Reliable, efficient delivery</h1>
@@ -25,23 +21,34 @@
 </p>
 </header>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+<div class="container">
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+<div class="box">
+<h3> Supervisor </h3>
+<p>Monitors activity to identify project roadblocks</p>
+    </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+  <div class="box">
+    <h3>Team Builder</h3>
+    <p>Scans our talent network to create the optimal team for your project</p>
+    </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  <div class="box">
+<h3>Karma</h3>
+ <p> Regularly evaluates our talent to ensure quality</p>
+</div>
+  
+  <div class="box">
+   <h3>Calculator</h3> 
+   <p>Uses data from past projects to provide better delivery estimates</p> 
+    </div>
 
+</div>
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.linkedin.com/feed/" target="_blank">Siobhan Whyte</a>.
     </p>
   </footer>
 </body>
