--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
   <header>
   <h1>Reliable, efficient delivery</h1>
   <h1>Powered by Technology</h1>
@@ -26,22 +27,30 @@
 <div class="box">
 <h3> Supervisor </h3>
 <p>Monitors activity to identify project roadblocks</p>
+<img src="images/icon-supervisor.svg"
+alt="supervisor" />
     </div>
 
   <div class="box">
     <h3>Team Builder</h3>
     <p>Scans our talent network to create the optimal team for your project</p>
-    </div>
+    <img src="images/icon-team-builder.svg"
+    alt="team-builder" />
+  </div>
 
   <div class="box">
 <h3>Karma</h3>
  <p> Regularly evaluates our talent to ensure quality</p>
+ <img src="images/icon-karma.svg"
+ alt="karma" />
 </div>
   
   <div class="box">
    <h3>Calculator</h3> 
    <p>Uses data from past projects to provide better delivery estimates</p> 
-    </div>
+   <img src="images/icon-calculator.svg"
+   alt="calculator" />
+  </div>
 
 </div>
   
