--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link rel=style href="style.css"> 
+  <link rel=stylesheet href="style.css" /> 
   <title>Frontend Mentor | Four card feature section</title>
 </head>
 
 <body>
 
   <header>
-  <h1>Reliable, efficient delivery</h1>
-  <h1>Powered by Technology</h1>
+  <h1>
+    Reliable, efficient delivery 
+    <span>Powered by Technology</span>
+  </h1>
 <p>
   Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful
@@ -25,28 +26,28 @@
 <div class="container">
 
 <div class="box">
-<h3> Supervisor </h3>
+<h2> Supervisor </h2>
 <p>Monitors activity to identify project roadblocks</p>
 <img src="images/icon-supervisor.svg"
 alt="supervisor" />
     </div>
 
   <div class="box">
-    <h3>Team Builder</h3>
+    <h2>Team Builder</h2>
     <p>Scans our talent network to create the optimal team for your project</p>
     <img src="images/icon-team-builder.svg"
     alt="team-builder" />
   </div>
 
   <div class="box">
-<h3>Karma</h3>
+<h2>Karma</h2>
  <p> Regularly evaluates our talent to ensure quality</p>
  <img src="images/icon-karma.svg"
  alt="karma" />
 </div>
   
   <div class="box">
-   <h3>Calculator</h3> 
+   <h2>Calculator</h2> 
    <p>Uses data from past projects to provide better delivery estimates</p> 
    <img src="images/icon-calculator.svg"
    alt="calculator" />
