--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="container">
 
-<div class="box box-cyan">
+<div class="box box-cyan box-push">
 <h2> Supervisor </h2>
 <p>Monitors activity to identify project roadblocks</p>
 <img src="images/icon-supervisor.svg"
@@ -39,19 +39,20 @@ alt="supervisor" />
     alt="team-builder" />
   </div>
 
-  <div class="box box-orange">
-<h2>Karma</h2>
- <p> Regularly evaluates our talent to ensure quality</p>
- <img src="images/icon-karma.svg"
- alt="karma" />
-</div>
   
-  <div class="box box-blue">
+  <div class="box box-blue box-push">
    <h2>Calculator</h2> 
    <p>Uses data from past projects to provide better delivery estimates</p> 
    <img src="images/icon-calculator.svg"
    alt="calculator" />
   </div>
+
+  <div class="box box-orange">
+    <h2>Karma</h2>
+     <p> Regularly evaluates our talent to ensure quality</p>
+     <img src="images/icon-karma.svg"
+     alt="karma" />
+    </div>
 
 </div>
   
